--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,7 @@ dependencies:
   flutter_dotenv: ^5.1.0
   permission_handler: ^11.3.1
   wakelock_plus: ^1.2.5
-
+  flutter_spinkit: ^5.2.1
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
