--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   get: ^4.6.6
   dio: ^5.6.0
   intl: ^0.20.1
+  shared_preferences: ^2.2.3
   flutter_dotenv: ^5.1.0
   permission_handler: ^11.3.1
   wakelock_plus: ^1.2.5
